@@ -22,17 +22,12 @@ Q       - show current query of a process\n\
 T       - sort by time\n\
 c       - toggle the display of process commands\n\
 d       - change number of displays to show\n\
-e       - list errors generated by last \"kill\" or \"renice\" command\n\
 h or ?  - help; show this text\n\
 i       - toggle the displaying of idle processes\n\
-k       - kill processes; send a signal to a list of processes\n\
-          not avilable when connected to a remote database\n\
 n or #  - change number of processes to display\n\
 o       - specify sort order (%s)\n\
           i/o stats (%s)\n\
 q       - quit\n\
-r       - renice a process\n\
-          not avilable when connected to a remote database\n\
 s       - change number of seconds to delay between updates\n\
 u       - display processes for only one user (+ selects all users)\n\
 \n\
