@@ -82,13 +82,6 @@ intelligent terminal.
 Use \*(lqnon-interactive\*(rq mode.  This is indentical to \*(lqbatch\*(rq
 mode.
 .TP
-.B \-q, \-\-quick-mode
-Renice
-.I pg_top
-to \-20 so that it will run faster.  This can be used when the system is
-being very sluggish to improve the possibility of discovering the problem.
-This option can only be used by root.
-.TP
 .B \-r, \-\-remote-mode
 Monitor a remote database where the database is on a system other than where
 pg_top is running from.
@@ -238,22 +231,10 @@ is included in this display.
 Display re-determined execution plan (EXPLAIN) of the SQL statement by a
 backend process (prompt for process id.)
 .TP
-.B e
-Display a list of system errors (if any) generated by the last
-.BR k ill
-or
-.BR r enice
-command.
-.TP
 .B i
 (or
 .BR I )
 Toggle the display of idle processes.
-.TP
-.B k
-Send a signal (\*(lqkill\*(rq by default) to a list of processes.  This
-acts similarly to the command
-.IR kill (1)).
 .TP
 .B L
 Display the currently held locks by a backend process (prompt for process
@@ -284,11 +265,6 @@ id.)
 .B q
 Quit
 .IR pg_top.
-.TP
-.B r
-Change the priority (the \*(lqnice\*(rq) of a list of processes.
-This acts similarly to the command
-.IR renice (8)).
 .TP
 .B s
 Change the number of seconds to delay between displays
@@ -336,11 +312,6 @@ is specified, a UID column will be substituted for USERNAME).
 .TP
 .B PRI
 Current priority of the process.
-.TP
-.B NICE
-Nice amount in the range \-20 to 20, as established by the use of
-the command
-.IR nice .
 .TP
 .B SIZE
 Total size of the process (text, data, and stack) given in kilobytes.
@@ -427,9 +398,7 @@ things can change while
 is collecting information for an update.  The picture it gives is only a
 close approximation to reality.
 .SH "SEE ALSO"
-kill(1),
 ps(1),
 stty(1),
 mem(4),
-renice(8)
 @MAN_SUPPLEMENT@
